--- a/src/app/features/send-order/add-problem/add-problem.component.html
+++ b/src/app/features/send-order/add-problem/add-problem.component.html
@@ -9,12 +9,14 @@
       optionLabel="name"
     ></p-selectButton>
   </div>
-  <button
-    pButton
-    pRipple
-    class="p-button-success p-button-raised p-button-sm btn-add"
-    label="เพิ่ม"
-    icon="fas fa-plus"
-    (click)="onAdd()"
-  ></button>
+  <div class="justify-content-end">
+    <button
+      pButton
+      pRipple
+      class="p-button-success p-button-raised p-button-sm btn-add"
+      label="เพิ่ม"
+      icon="fas fa-plus"
+      (click)="onAdd()"
+    ></button>
+  </div>
 </div>
