--- a/src/app/features/send-order/new-problem/new-problem.component.html
+++ b/src/app/features/send-order/new-problem/new-problem.component.html
@@ -73,12 +73,12 @@
   </ng-template>
 </p-table>
 
-<div class="flex justify-content-center my-3">
+<div class="flex justify-content-end my-3">
   <button
     pButton
     pRipple
     class="p-button p-button-warning"
-    [style]="{ width: '50%', margin: 'auto 1rem' }"
+    [style]="{ width: 'auto', margin: 'auto 2rem' }"
     label="ย้อนกลับ"
     (click)="onBack()"
   ></button>
@@ -86,7 +86,7 @@
     pButton
     pRipple
     class="p-button p-button-success"
-    [style]="{ width: '50%', margin: 'auto 1rem' }"
+    [style]="{ width: 'auto', margin: 'auto 5rem auto 1rem' }"
     label="ตรวจสอบข้อมูล"
     (click)="onNext()"
   ></button>
