--- a/src/app/pages/cloth-management/confirm-order/confirm-order.component.html
+++ b/src/app/pages/cloth-management/confirm-order/confirm-order.component.html
@@ -166,9 +166,12 @@
     <label>สรุป</label>
   </div>
   <div class="container__summarize">
-    <p style="color: green;">ผ้าทั้งหมด {{ totalCloths }} ชิ้น</p>
-    <br>
-    <p style="color: rgb(211, 172, 0); margin-top: 2rem;" *ngIf="thickCloths > 0">
+    <p style="color: green">ผ้าทั้งหมด {{ totalCloths }} ชิ้น</p>
+    <br />
+    <p
+      style="color: rgb(211, 172, 0); margin-top: 2rem"
+      *ngIf="thickCloths > 0"
+    >
       ผ้าหนา {{ thickCloths }} ชิ้น
     </p>
     <p style="color: rgb(211, 172, 0)" *ngIf="thinCloths > 0">
@@ -180,34 +183,37 @@
     <p style="color: rgb(211, 172, 0)" *ngIf="otherCloths > 0">
       ผ้าอื่นๆ {{ otherCloths }} ชิ้น
     </p>
-    <br>
-    <p style="color: rgb(128, 41, 0); margin-top: 2rem;" *ngIf="problemCloths > 0">
+    <br />
+    <p
+      style="color: rgb(128, 41, 0); margin-top: 2rem"
+      *ngIf="problemCloths > 0"
+    >
       เป็นผ้ามีปัญหาจำนวน {{ problemCloths }} ชิ้น
     </p>
-    <br>
-    <p style="color: rgb(10, 209, 10); margin-top: 2rem;" *ngIf="inProcess > 0">
+    <br />
+    <p style="color: rgb(10, 209, 10); margin-top: 2rem" *ngIf="inProcess > 0">
       นำเข้าซัก {{ inProcess }} ชิ้น
     </p>
     <p style="color: rgb(180, 43, 8)" *ngIf="outProcess > 0">
       ไม่นำเข้าซัก {{ outProcess }} ชิ้น
     </p>
   </div>
-  <div class="grid container__btn-group">
-    <div class="col-6">
+  <div class="grid container__btn-group flex justify-content-end">
+    <div class="col-2">
       <button
         pButton
         pRipple
         label="ย้อนกลับ"
-        class="p-button-raised p-button-warning p-button-lg container__btn-group--btn w-full"
+        class="p-button-raised p-button-warning p-button-lg container__btn-group--btn"
         (click)="onReturn()"
       ></button>
     </div>
-    <div class="col-6">
+    <div class="col-3">
       <button
         pButton
         pRipple
         label="สร้างรายการรับผ้า"
-        class="p-button-raised p-button-success p-button-lg container__btn-group--btn w-full"
+        class="p-button-raised p-button-success p-button-lg container__btn-group--btn"
         (click)="onSuccess()"
       ></button>
     </div>
