--- a/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
+++ b/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
@@ -95,10 +95,10 @@
     <button
       pButton
       pRipple
-      class="p-button-success p-button-raised p-button-lg"
+      class="p-button-success p-button-raised p-button-lg align-self-end"
       label="เพิ่ม"
       icon="fas fa-plus"
-      style="width: 100%; margin-top: 1rem"
+      style="margin-top: 1rem"
       (click)="onNewClothProblem()"
     ></button>
   </div>
