--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -120,7 +120,7 @@
               class="text-left absolute"
               [style]="{ top: '15px' }"
             >
-              {{ rowData[col.field] | thaidate: "short" }}
+              {{ rowData[col.field] | thaidate: "shortNoTime" }}
             </div>
             <div
               class="text-left"
