--- a/src/app/pages/type-cloth-management/type-cloth-management.component.html
+++ b/src/app/pages/type-cloth-management/type-cloth-management.component.html
@@ -98,7 +98,7 @@
       class="p-button-success p-button-raised p-button-lg"
       label="เพิ่ม"
       icon="fas fa-plus"
-      style="width: 100%; margin-top: 1rem"
+      style="margin-top: 1rem; align-self: flex-end !important"
       (click)="onNewTypeCloth()"
     ></button>
   </div>
