--- a/src/app/features/send-order/confirm-order-sender/confirm-order-sender.component.html
+++ b/src/app/features/send-order/confirm-order-sender/confirm-order-sender.component.html
@@ -1,4 +1,5 @@
-<loading *ngIf="loading"></loading><p-table [value]="clothes" responsiveLayout="scroll">
+<loading *ngIf="loading"></loading
+><p-table [value]="clothes" responsiveLayout="scroll">
   <ng-template pTemplate="header">
     <tr>
       <th>รหัส</th>
@@ -61,12 +62,12 @@
     </tr>
   </ng-template>
 </p-table>
-<div class="flex justify-content-center my-3">
+<div class="flex justify-content-end my-3">
   <button
     pButton
     pRipple
     class="p-button p-button-warning"
-    [style]="{ width: '50%', margin: 'auto 1rem' }"
+    [style]="{ width: 'auto', margin: 'auto 2rem' }"
     label="ย้อนกลับ"
     (click)="onBack()"
   ></button>
@@ -74,7 +75,7 @@
     pButton
     pRipple
     class="p-button p-button-success"
-    [style]="{ width: '50%', margin: 'auto 1rem' }"
+    [style]="{ width: 'auto', margin: 'auto 5rem auto 1rem' }"
     label="ยืนยันการส่งผ้า"
     (click)="onNext()"
   ></button>
