--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -28,12 +28,12 @@
   >
     <ng-template pTemplate="header" let-columns>
       <tr>
-        <th>ลำดับ</th>
-        <th>วันที่</th>
-        <th>ลูกค้า</th>
-        <th>สถานะ</th>
-        <th>จำนวนผ้าที่ยังไม่ได้ส่ง</th>
-        <th>จำนวนผ้าที่ส่งไปแล้ว</th>
+        <th [style]="{ width: '5%' }">ลำดับ</th>
+        <th [style]="{ width: '20%' }">วันที่</th>
+        <th [style]="{ width: '20%' }">ลูกค้า</th>
+        <th [style]="{ width: '15%' }">สถานะ</th>
+        <th [style]="{ width: '15%' }">จำนวนผ้าที่ยังไม่ได้ส่ง</th>
+        <th [style]="{ width: '15%' }">จำนวนผ้าที่ส่งไปแล้ว</th>
       </tr>
     </ng-template>
     <ng-template
