--- a/src/app/pages/cloth-management/confirm-order/confirm-order.component.html
+++ b/src/app/pages/cloth-management/confirm-order/confirm-order.component.html
@@ -198,7 +198,7 @@
       ไม่นำเข้าซัก {{ outProcess }} ชิ้น
     </p>
   </div>
-  <div class="grid container__btn-group flex justify-content-end">
+  <div class="grid container__btn-group flex justify-content-between">
     <div class="col-2">
       <button
         pButton
@@ -208,7 +208,7 @@
         (click)="onReturn()"
       ></button>
     </div>
-    <div class="col-3">
+    <div class="col-4 text-right">
       <button
         pButton
         pRipple
