--- a/src/app/pages/customer-management/customer-management.component.html
+++ b/src/app/pages/customer-management/customer-management.component.html
@@ -52,8 +52,7 @@
         <td class="text-left">{{ cloth.key }}</td>
         <td class="text-left">{{ cloth.firstName }} {{ cloth.lastName }}</td>
         <td class="text-left">
-          {{ cloth.address }}, อำเภอ: {{ cloth.disTrict }}, จังหวัด:
-          {{ cloth.proVince }}, รหัสไปรษณีฺ: {{ cloth.postalCode }}
+          {{ cloth.address }} อ.{{ cloth.disTrict }} จ.{{ cloth.proVince }} {{ cloth.postalCode }}
         </td>
         <td class="text-left">{{ cloth.phoneNumber }}</td>
         <td class="text-left">{{ cloth.email }}</td>
