--- a/src/app/features/send-order/confirm-order-sender/confirm-order-sender.component.html
+++ b/src/app/features/send-order/confirm-order-sender/confirm-order-sender.component.html
@@ -62,7 +62,7 @@
     </tr>
   </ng-template>
 </p-table>
-<div class="flex justify-content-end my-3">
+<div class="flex justify-content-between my-3">
   <button
     pButton
     pRipple
