--- a/src/app/features/send-order/new-problem/new-problem.component.html
+++ b/src/app/features/send-order/new-problem/new-problem.component.html
@@ -73,7 +73,7 @@
   </ng-template>
 </p-table>
 
-<div class="flex justify-content-end my-3">
+<div class="flex justify-content-between my-3">
   <button
     pButton
     pRipple
