แก้ทุกอย่างยกเว้นออกรายงาน

--- a/src/app/features/add-cloth/add-cloth.component.html
+++ b/src/app/features/add-cloth/add-cloth.component.html
@@ -70,6 +70,7 @@
       pRipple
       class="p-button-success p-button-raised p-button-sm btn-add"
       label="เพิ่ม"
+      [style]="{ width: '100px', margin: 'auto 1rem' }"
       icon="fas fa-plus"
       (click)="onAdd()"
     ></button>
