--- a/src/app/features/send-order/select-clothe/select-clothe.component.html
+++ b/src/app/features/send-order/select-clothe/select-clothe.component.html
@@ -121,7 +121,7 @@
     pButton
     pRipple
     class="p-button p-button-success"
-    [style]="{ width: 'auto', margin: 'auto 5rem' }"
+    [style]="{ width: '100px', margin: 'auto 5rem' }"
     label="ถัดไป"
     (click)="onNext()"
   ></button>
