--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -10,11 +10,11 @@
   <span class="navbar__name">{{
     employee?.firstName + " " + employee?.lastName
   }}</span>
-  <img
+  <!-- <img
     class="navbar__avatar"
     src="./../../../../assets/images/washing-icon.png"
     alt="Avatar"
-  />
+  /> -->
   <i
     class="fas fa-caret-square-down navbar__toggle"
     (mouseenter)="visibleToggleMenu = !visibleToggleMenu"
