--- a/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
+++ b/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
@@ -44,7 +44,7 @@
     <ng-template pTemplate="body" let-cloth let-index="rowIndex">
       <tr>
         <td class="text-center">{{ index + 1 }}</td>
-        <td class="text-left">{{ cloth.key }}</td>
+        <td class="text-center">{{ cloth.key }}</td>
         <td class="text-left">{{ cloth.name }}</td>
         <td class="container__action" class="text-center">
           <!-- <button
