--- a/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
+++ b/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
@@ -45,7 +45,7 @@
         <th class="text-center">วันที่</th>
         <th class="text-center">เลขที่รายการ</th>
         <th class="text-center">ชื่อลูกค้า</th>
-        <th class="text-center">จำนวนผ้าที่ยังไม่ได้ส่ง</th>
+        <th class="text-center">จำนวนผ้าที่ยังไม่ได้ส่ง(ชิ้น)</th>
         <th class="text-center">สถานะ</th>
         <th class="text-center"></th>
       </tr>
@@ -67,7 +67,7 @@
           <span class="p-column-title">ชื่อลูกค้า</span
           >{{ cloth.customer.firstName }} {{ cloth.customer.lastName }}
         </td>
-        <td class="text-right">
+        <td class="text-center">
           <span class="p-column-title">จำนวนผ้าที่ยังไม่ได้ส่ง</span
           >{{ cloth.numClothe }}
         </td>
