--- a/src/app/features/send-order/confirm-order-sender/confirm-order-sender.component.html
+++ b/src/app/features/send-order/confirm-order-sender/confirm-order-sender.component.html
@@ -62,12 +62,12 @@
     </tr>
   </ng-template>
 </p-table>
-<div class="flex justify-content-between my-3">
+<div class="flex justify-content-end my-3">
   <button
     pButton
     pRipple
     class="p-button p-button-warning"
-    [style]="{ width: 'auto', margin: 'auto 2rem' }"
+    [style]="{ width: '110px', margin: 'auto 2rem' }"
     label="ย้อนกลับ"
     (click)="onBack()"
   ></button>
@@ -75,7 +75,7 @@
     pButton
     pRipple
     class="p-button p-button-success"
-    [style]="{ width: 'auto', margin: 'auto 5rem auto 1rem' }"
+    [style]="{ width: '110px', margin: 'auto 7rem auto 1rem' }"
     label="ยืนยันการส่งผ้า"
     (click)="onNext()"
   ></button>
